@@ -306,24 +306,6 @@ name|util
 operator|.
 name|valuesource
 operator|.
-name|ConcatStringFunction
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|analytics
-operator|.
-name|util
-operator|.
-name|valuesource
-operator|.
 name|ConstDateSource
 import|;
 end_import
@@ -751,6 +733,22 @@ operator|.
 name|schema
 operator|.
 name|TrieLongField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|function
+operator|.
+name|ConcatStringFunction
 import|;
 end_import
 
