@@ -712,6 +712,22 @@ name|search
 operator|.
 name|function
 operator|.
+name|ConcatStringFunction
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|search
+operator|.
+name|function
+operator|.
 name|OrdFieldSource
 import|;
 end_import
@@ -5822,6 +5838,60 @@ name|fp
 operator|.
 name|parseValueSourceList
 argument_list|()
+argument_list|)
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|addParser
+argument_list|(
+literal|"concat"
+argument_list|,
+operator|new
+name|ValueSourceParser
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|ValueSource
+name|parse
+parameter_list|(
+name|FunctionQParser
+name|fp
+parameter_list|)
+throws|throws
+name|SyntaxError
+block|{
+name|List
+argument_list|<
+name|ValueSource
+argument_list|>
+name|sources
+init|=
+name|fp
+operator|.
+name|parseValueSourceList
+argument_list|()
+decl_stmt|;
+return|return
+operator|new
+name|ConcatStringFunction
+argument_list|(
+name|sources
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|ValueSource
+index|[
+name|sources
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
 argument_list|)
 return|;
 block|}
