@@ -3476,6 +3476,53 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+DECL|method|testFuncConcat
+specifier|public
+name|void
+name|testFuncConcat
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"myField"
+argument_list|,
+literal|"bar_f"
+argument_list|,
+literal|"myOtherField"
+argument_list|,
+literal|"bar_t"
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|assertFuncEquals
+argument_list|(
+name|req
+argument_list|,
+literal|"concat(bar_f,bar_t)"
+argument_list|,
+literal|"concat($myField,bar_t)"
+argument_list|,
+literal|"concat(bar_f,$myOtherField)"
+argument_list|,
+literal|"concat($myField,$myOtherField)"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|req
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|testFuncSingleValueMathFuncs
 specifier|public
 name|void
