@@ -5686,6 +5686,110 @@ literal|"/response/docs/[0]=={'a':true, 'b':false, 'c':true, 'd':false, 'e':fals
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testConcatFunction
+specifier|public
+name|void
+name|testConcatFunction
+parameter_list|()
+block|{
+name|clearIndex
+argument_list|()
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"field1_t"
+argument_list|,
+literal|"buzz"
+argument_list|,
+literal|"field2_t"
+argument_list|,
+literal|"word"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"field1_t"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"field2_t"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"field4_t"
+argument_list|,
+literal|"4"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"field:concat(field1_t,field2_t)"
+argument_list|)
+argument_list|,
+literal|" //str[@name='field']='buzzword'"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:2"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"field:concat(field1_t,field2_t,field4_t)"
+argument_list|)
+argument_list|,
+literal|" //str[@name='field']='124'"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"field:def(concat(field3_t, field4_t), 'defValue')"
+argument_list|)
+argument_list|,
+literal|" //str[@name='field']='defValue'"
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testPseudoFieldFunctions
